fix: Add spacing to custom range labels

--- a/packages/grafana-ui/src/components/TimePicker/_TimePicker.scss
+++ b/packages/grafana-ui/src/components/TimePicker/_TimePicker.scss
@@ -137,6 +137,10 @@
   }
 }
 
+.time-picker-popover-custom-range-label {
+  padding-right: $space-xs;
+}
+
 @media only screen and (max-width: 1116px) {
   .time-picker-popover {
     margin-left: $spacer;
